--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8" />
         <title>CyberTools</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="shortcut icon" href="./assets/logowb.png" type="image/x-icon" />
 
         <!-- SEO Meta -->
         <meta name="description" content="Free open-source cybersecurity tools: Steganography, Hash Tools, Base64 Utilities, JWT Decoder, and Hex Viewer." />
