v3 - New Hex Viewer Tool

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <!-- Header / Navbar -->
         <header class="bg-white shadow-sm sticky top-0 z-50">
             <div class="max-w-6xl mx-auto flex justify-between items-center p-4">
-                <a href="/"><h1 class="text-xl font-bold text-blue-700">CyberTools</h1></a>
+                <a href="/CyberTools"><h1 class="text-xl font-bold text-blue-700">CyberTools</h1></a>
                 <nav class="space-x-2">
                     <a href="tools/steganography/index.html" class="px-3 py-1 rounded-md text-gray-600 hover:bg-gray-100">Steganography</a>
                     <a href="tools/hash-tools/index.html" class="px-3 py-1 rounded-md text-gray-600 hover:bg-gray-100">Hash Tools</a>
