--- a/tools/hex-viewer/index.html
+++ b/tools/hex-viewer/index.html
@@ -4,31 +4,7 @@
         <meta charset="UTF-8" />
         <title>CyberTools - Hex Viewer Online</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-        <!-- SEO Meta -->
-        <meta name="description" content="Free online Hex Viewer: Upload any file and view its hexadecimal and ASCII representation directly in your browser." />
-        <meta name="keywords" content="cybersecurity, hex viewer, online hex editor, file inspector, cybersecurity tools" />
-        <meta name="author" content="RlxChap2" />
-
-        <!-- Open Graph -->
-        <meta property="og:title" content="CyberTools - Hex Viewer Online" />
-        <meta property="og:description" content="Free online tool to inspect files in Hexadecimal and ASCII format." />
-        <meta property="og:type" content="website" />
-        <meta property="og:url" content="https://github.com/RlxChap2/CyberTools" />
-        <meta property="og:image" content="https://github.com/RlxChap2/CyberTools" />
-
-        <!-- TailwindCSS -->
         <script src="https://cdn.tailwindcss.com"></script>
-        <style>
-            .hex-cell,
-            .ascii-cell {
-                cursor: pointer;
-                padding: 2px 4px;
-            }
-            .highlight {
-                background-color: #bfdbfe; /* Tailwind blue-200 */
-            }
-        </style>
     </head>
     <body class="bg-gray-50 text-gray-900 font-sans">
         <!-- Header -->
@@ -54,27 +30,25 @@
                 <div class="p-5 bg-white border rounded-xl shadow-sm mb-6">
                     <h3 class="font-medium text-lg mb-3">Upload a File</h3>
                     <input type="file" id="fileInput" class="mb-3 block text-sm" />
-                    <button id="viewBtn" class="w-full bg-blue-600 hover:bg-blue-700 text-white px-4 py-2 rounded-lg">View in Hex</button>
                 </div>
 
                 <!-- Output -->
-                <div class="p-5 bg-white border rounded-xl shadow-sm overflow-auto max-h-[600px]">
-                    <h3 class="font-medium text-lg mb-3">Hex Output</h3>
-                    <table class="text-xs font-mono w-full border-collapse">
-                        <thead class="bg-gray-100 sticky top-0">
+                <div id="viewerContainer" class="p-5 bg-white border rounded-xl shadow-sm overflow-auto h-[500px] relative">
+                    <table class="table-fixed w-full border-collapse text-xs font-mono">
+                        <thead class="bg-gray-100 sticky top-0 z-10">
                             <tr>
-                                <th class="px-2 py-1 text-left">Offset</th>
+                                <th class="px-2 py-1 text-left w-24">Offset</th>
                                 <th class="px-2 py-1 text-left">Hex</th>
-                                <th class="px-2 py-1 text-left">ASCII</th>
+                                <th class="px-2 py-1 text-left w-48">ASCII</th>
                             </tr>
                         </thead>
-                        <tbody id="hexTable"></tbody>
+                        <tbody id="hexView"></tbody>
                     </table>
+                    <div id="spacer"></div>
                 </div>
             </section>
         </main>
 
-        <!-- Script -->
         <script src="script.js"></script>
     </body>
 </html>
