--- a/tools/hex-viewer/index.html
+++ b/tools/hex-viewer/index.html
@@ -4,6 +4,21 @@
         <meta charset="UTF-8" />
         <title>CyberTools - Hex Viewer Online</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="shortcut icon" href="../../assets/logowb.png" type="image/x-icon" />
+
+        <!-- SEO Meta -->
+        <meta name="description" content="Free online Steganography tool: hide secret messages inside images or decode hidden text. Simple, secure, and open-source." />
+        <meta name="keywords" content="steganography, hide message in image, decode hidden text, online tool, cybersecurity" />
+        <meta name="author" content="RlxChap2" />
+
+        <!-- Open Graph -->
+        <meta property="og:title" content="CyberTools - Steganography Tool" />
+        <meta property="og:description" content="Hide messages inside images or decode hidden text online with CyberTools Steganography." />
+        <meta property="og:type" content="website" />
+        <meta property="og:url" content="https://rlxchap2.github.io/CyberTools/tools/hex-viewerindex.html" />
+        <meta property="og:image" content="https://rlxchap2.github.io/CyberTools/assets/logowb.png" />
+
+        <!-- TailwindCSS -->
         <script src="https://cdn.tailwindcss.com"></script>
     </head>
     <body class="bg-gray-50 text-gray-900 font-sans">
