--- a/tools/steganography/index.html
+++ b/tools/steganography/index.html
@@ -15,8 +15,8 @@
         <meta property="og:title" content="CyberTools - Steganography Tool" />
         <meta property="og:description" content="Hide messages inside images or decode hidden text online with CyberTools Steganography." />
         <meta property="og:type" content="website" />
-        <meta property="og:url" content="https://github.com/RlxChap2/CyberTools/steganography" />
-        <meta property="og:image" content="https://github.com/RlxChap2/CyberTools/logo.png" />
+        <meta property="og:url" content="https://rlxchap2.github.io/CyberTools/tools/steganography/index.html" />
+        <meta property="og:image" content="https://rlxchap2.github.io/CyberTools/assets/logowb.png" />
 
         <!-- TailwindCSS -->
         <script src="https://cdn.tailwindcss.com"></script>
