Fixed Meta data

--- a/tools/hex-viewer/index.html
+++ b/tools/hex-viewer/index.html
@@ -7,20 +7,21 @@
         <link rel="shortcut icon" href="../../assets/logowb.png" type="image/x-icon" />
 
         <!-- SEO Meta -->
-        <meta name="description" content="Free online Steganography tool: hide secret messages inside images or decode hidden text. Simple, secure, and open-source." />
-        <meta name="keywords" content="steganography, hide message in image, decode hidden text, online tool, cybersecurity" />
+        <meta name="description" content="Free online Hex Viewer: Upload any file and view its hexadecimal and ASCII representation directly in your browser. Fast, simple, and open-source." />
+        <meta name="keywords" content="hex viewer, online hex editor, file inspector, binary viewer, ascii viewer, cybersecurity tools" />
         <meta name="author" content="RlxChap2" />
 
         <!-- Open Graph -->
-        <meta property="og:title" content="CyberTools - Steganography Tool" />
-        <meta property="og:description" content="Hide messages inside images or decode hidden text online with CyberTools Steganography." />
+        <meta property="og:title" content="CyberTools - Hex Viewer Online" />
+        <meta property="og:description" content="Inspect files in hexadecimal and ASCII format directly in your browser with CyberTools Hex Viewer." />
         <meta property="og:type" content="website" />
-        <meta property="og:url" content="https://rlxchap2.github.io/CyberTools/tools/hex-viewerindex.html" />
+        <meta property="og:url" content="https://rlxchap2.github.io/CyberTools/tools/hex-viewer/index.html" />
         <meta property="og:image" content="https://rlxchap2.github.io/CyberTools/assets/logowb.png" />
 
         <!-- TailwindCSS -->
         <script src="https://cdn.tailwindcss.com"></script>
     </head>
+
     <body class="bg-gray-50 text-gray-900 font-sans">
         <!-- Header -->
         <header class="bg-white shadow-sm sticky top-0 z-50">
