added Bew Tools && Fixed Old Tools

--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
                 <a href="/CyberTools"><h1 class="text-xl font-bold text-blue-700">CyberTools</h1></a>
                 <nav class="space-x-2">
                     <a href="tools/steganography/index.html" class="px-3 py-1 rounded-md text-gray-600 hover:bg-gray-100">Steganography</a>
-                    <a href="tools/hash-tools/index.html" class="px-3 py-1 rounded-md text-gray-600 hover:bg-gray-100">Hash Tools</a>
-                    <a href="tools/encoding-utils/index.html" class="px-3 py-1 rounded-md text-gray-600 hover:bg-gray-100">Base64</a>
+                    <a href="tools/base64/index.html" class="px-3 py-1 rounded-md text-gray-600 hover:bg-gray-100">Base64</a>
                     <a href="tools/jwt-decoder/index.html" class="px-3 py-1 rounded-md text-gray-600 hover:bg-gray-100">JWT Decoder</a>
                     <a href="tools/hex-viewer/index.html" class="px-3 py-1 rounded-md text-gray-600 hover:bg-gray-100">Hex Viewer</a>
                 </nav>
