--- a/tools/hex-viewer/index.html
+++ b/tools/hex-viewer/index.html
@@ -26,13 +26,13 @@
         <!-- Header -->
         <header class="bg-white shadow-sm sticky top-0 z-50">
             <div class="max-w-6xl mx-auto flex justify-between items-center p-4">
-                <a href="/"><h1 class="text-xl font-bold text-blue-700">CyberTools</h1></a>
+                <a href="/CyberTools"><h1 class="text-xl font-bold text-blue-700">CyberTools</h1></a>
                 <nav class="space-x-2">
                     <a href="../steganography/index.html" class="px-3 py-1 rounded-md text-gray-600 hover:bg-gray-100">Steganography</a>
-                    <a href="../hash-tools/index.html" class="px-3 py-1 rounded-md text-gray-600 hover:bg-gray-100">Hash Tools</a>
-                    <a href="../encoding-utils/index.html" class="px-3 py-1 rounded-md text-gray-600 hover:bg-gray-100">Base64</a>
+                    <a href="../base64/index.html" class="px-3 py-1 rounded-md text-gray-600 hover:bg-gray-100">Base64</a>
                     <a href="../jwt-decoder/index.html" class="px-3 py-1 rounded-md text-gray-600 hover:bg-gray-100">JWT Decoder</a>
-                    <a href="../hex-viewer/index.html" class="px-3 py-1 rounded-md text-blue-600 font-semibold">Hex Viewer</a>
+                    <a href="../index.html" class="px-3 py-1 rounded-md text-blue-600 font-semibold">Hex Viewer</a>
+                    <a href="../rc4/index.html" class="px-3 py-1 rounded-md text-gray-600 hover:bg-gray-100">RC4r</a>
                 </nav>
             </div>
         </header>
