Edited Main page

--- a/tools/hex-viewer/index.html
+++ b/tools/hex-viewer/index.html
@@ -22,7 +22,7 @@
                     <a href="../base64/index.html" class="px-3 py-1 rounded-md text-gray-600 hover:bg-gray-100">Base64</a>
                     <a href="../jwt-decoder/index.html" class="px-3 py-1 rounded-md text-gray-600 hover:bg-gray-100">JWT Decoder</a>
                     <a href="./index.html" class="px-3 py-1 rounded-md text-blue-600 font-semibold">Hex Editor</a>
-                    <a href="../rc4/index.html" class="px-3 py-1 rounded-md text-gray-600 hover:bg-gray-100">RC4r</a>
+                    <a href="../rc4/index.html" class="px-3 py-1 rounded-md text-gray-600 hover:bg-gray-100">RC4</a>
                 </nav>
             </div>
         </header>
